--- a/metrics/metrics-server-deployment.yaml
+++ b/metrics/metrics-server-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: metrics-server
   namespace: kube-system
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1 #extensions/v1beta1
 kind: Deployment
 metadata:
   name: metrics-server
@@ -23,18 +23,26 @@ spec:
         k8s-app: metrics-server
     spec:
       serviceAccountName: metrics-server
+      tolerations:
+        - effect: NoSchedule
+          key: node.kubernetes.io/unschedulable
+          operator: Exists
+        - key: NoSchedule
+          operator: Exists
+          effect: NoSchedule
       volumes:
       # mount in tmp so we can safely use from-scratch images and/or read-only containers
       - name: tmp-dir
         emptyDir: {}
       containers:
       - name: metrics-server
-        image: nfs.k8s:8080/k8s/metrics-server-amd64:v0.3.6  #k8s.gcr.io/metrics-server-amd64:v0.3.6
-        imagePullPolicy: IfNotPresent
+        image: mirrorgooglecontainers/metrics-server-amd64:v0.3.1 #k8s.gcr.io/metrics-server-amd64:v0.3.1
+        imagePullPolicy: IfNotPresent #Always
         command:
-          - /metrics-server
-          - --kubelet-preferred-address-types=InternalIP
-          - --kubelet-insecure-tls
+        - /metrics-server
+        - --kubelet-preferred-address-types=InternalIP,Hostname,InternalDNS,ExternalDNS,ExternalIP
+        - --kubelet-insecure-tls
         volumeMounts:
         - name: tmp-dir
           mountPath: /tmp
+
