--- a/metrics/metrics-server-service.yaml
+++ b/metrics/metrics-server-service.yaml
@@ -6,11 +6,10 @@ metadata:
   namespace: kube-system
   labels:
     kubernetes.io/name: "Metrics-server"
-    kubernetes.io/cluster-service: "true"
 spec:
   selector:
     k8s-app: metrics-server
   ports:
   - port: 443
     protocol: TCP
-    targetPort: main-port
+    targetPort: 443
