--- a/ipam/ipam-deployment.yaml
+++ b/ipam/ipam-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: ipam
     spec:
       containers:
-      - image: nfs.k8s:8080/k8s/phpipam:1.4
+      - image: nfs.k8s:8080/k8s/phpipam:1.4 #docker pull pierrecdn/phpipam
         name: ipam
         imagePullPolicy: IfNotPresent
         env:
